fixed image alignment

--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ ul {
     margin-bottom: 200px;
 }
 
-#dog {
+#reds2 {
     margin-top: 50px;
     width: 300px;
     height: 300px;
@@ -199,7 +199,7 @@ ul {
     width: 650px;
 }
 
-.kayak, .media_lab, .area_1, .hkust, .md {
+.ut_austin, .uc_berkeley {
     margin-bottom: 9%;
 }
 
